[gd_scene load_steps=13 format=3 uid="uid://cwmh6v0v1h55u"]

[ext_resource type="Script" uid="uid://chxeswjm6qscv" path="res://Scenes/Components/PackComponent/PackComponent.gd" id="1_ev5bh"]
[ext_resource type="Texture2D" uid="uid://dthy24qh2pp7r" path="res://Assets/Images/default_image_pack.png" id="2_3llcl"]
[ext_resource type="Texture2D" uid="uid://cixaoueymw0bn" path="res://Assets/Images/GUID/tile_tikitiki_puzzle.png" id="3_ev5bh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3llcl"]
bg_color = Color(0.282353, 0.419608, 1, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ev5bh"]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="AtlasTexture" id="AtlasTexture_3llcl"]
atlas = ExtResource("3_ev5bh")
region = Rect2(1214, 668, 125, 101)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6pgc5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0xr7k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ymhho"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2xkka"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ueb6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbtrw"]
bg_color = Color(0.282353, 0.419608, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.147509, 8.56727e-05, 0.950081, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="PackComponent" type="Control" node_paths=PackedStringArray("imagePuzzle", "labelPuzzle")]
custom_minimum_size = Vector2(480, 350)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -826.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource("1_ev5bh")
imagePuzzle = NodePath("Panel/MarginContainer/Panel/PackImage")
labelPuzzle = NodePath("TitleBackground/TitleLabel")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3llcl")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="PanelContainer" parent="Panel/MarginContainer"]
clip_children = 1
clip_contents = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ev5bh")

[node name="PackImage" type="TextureRect" parent="Panel/MarginContainer/Panel"]
clip_contents = true
layout_mode = 2
texture = ExtResource("2_3llcl")
expand_mode = 1
stretch_mode = 6

[node name="LockOverlay" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 49.0
offset_right = -18.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelBlue"

[node name="LockIcon" type="TextureRect" parent="LockOverlay"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_3llcl")
expand_mode = 1
stretch_mode = 3

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxTexture_6pgc5")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_0xr7k")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_ymhho")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_2xkka")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6ueb6")
flat = true

[node name="TitleBackground" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -195.0
offset_top = -40.0
offset_right = 195.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qbtrw")

[node name="TitleLabel" type="Label" parent="TitleBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "FRUTAS"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
